.provarCaches/00D6C0000000xA6UAI/objects/sked__Location_Resource_Score__c.object
<CustomObject>
    <fields>
        <fullName>sked__Blacklisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blacklisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Location__c</fullName>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Location Resource Scores</relationshipLabel>
        <relationshipName>Location_Resource_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Location Resource Scores</relationshipLabel>
        <relationshipName>Location_Resource_Scores</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Whitelisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whitelisted</label>
        <type>Checkbox</type>
    </fields>
    <label>Location Resource Score</label>
    <nameField>
        <displayFormat>LRS-{00000}</displayFormat>
        <label>LocationResourceScore Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Resource Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>